--- a/app/config/config_dev.yml
+++ b/app/config/config_dev.yml
@@ -36,8 +36,8 @@ parameters:
 
 doctrine:
     dbal:
-       host:     192.168.1.18 #localhost
-       dbname:   jili_1117
+       host:     192.168.1.44
+       dbname:   jili_1117 #jili_0904
        password:  MyNewPassword
        charset:  UTF8
 
