--- a/app/config/config_test.yml
+++ b/app/config/config_test.yml
@@ -21,7 +21,7 @@ swiftmailer:
 
 doctrine:
     dbal:
-       host:     192.168.1.18 #localhost
+       host:     192.168.1.44 
        dbname:   jili_test
        password:  MyNewPassword
        charset:  UTF8
