淘宝后台开发 #523

--- a/src/Jili/BackendBundle/Resources/config/routing.yml
+++ b/src/Jili/BackendBundle/Resources/config/routing.yml
@@ -18,3 +18,6 @@ edm-unsubscribe:
     resource: "@JiliBackendBundle/Controller/EdmUnsubscribeController.php"
     type:     annotation
 
+admin-taobao:
+    resource: "@JiliBackendBundle/Controller/AdminTaobaoController.php"
+    type:     annotation
