--- a/src/Jili/ApiBundle/Resources/config/services.yml
+++ b/src/Jili/ApiBundle/Resources/config/services.yml
@@ -32,6 +32,7 @@ parameters:
     user_bind.class: Jili\ApiBundle\Services\UserBind
     user_login.class: Jili\ApiBundle\Services\UserLogin
     user_qq_login.class: Jili\ApiBundle\Services\QQLogin
+    user_taobao_login.class: Jili\ApiBundle\Services\TaoBaoLogin
     
 # session 
     session.task_list.class: Jili\ApiBundle\Services\Session\User\TaskList
@@ -234,3 +235,5 @@ services:
     user_qq_login:
         class: %user_qq_login.class%
 
+    user_taobao_login:
+        class: %user_taobao_login.class%
