--- a/app/config/custom_parameters.yml.dist
+++ b/app/config/custom_parameters.yml.dist
@@ -265,3 +265,11 @@ parameters:
         points_pool: "%cache_data_path%/game_seeker_points_pool_YYYYmmdd.json"
         chest:  "%cache_data_path%/game_seeker_config_chest.txt"
 
+    game_eggs_breaker:
+        ranking: "%cache_data_path%/game_eggs_breaker/ranking.cached"
+        common:
+            points_strategy: "%cache_data_path%/game_eggs_breaker/common/points_strategy_conf.json"
+            points_pool: "%cache_data_path%/game_eggs_breaker/common/points_pool_YYYYmmdd.json"
+        consolation:
+            points_strategy: "%cache_data_path%/game_eggs_breaker/consolation/points_strategy_conf.json"
+            points_pool: "%cache_data_path%/game_eggs_breaker/consolation/points_pool_YYYYmmdd.json"
