--- a/src/Jili/BackendBundle/Resources/config/routing.yml
+++ b/src/Jili/BackendBundle/Resources/config/routing.yml
@@ -19,3 +19,7 @@ edm-unsubscribe:
     resource: "@JiliBackendBundle/Controller/EdmUnsubscribeController.php"
     type:     annotation
 
+
+analog-offerwow:
+    resource: "@JiliBackendBundle/Controller/AnalogOfferwowController.php"
+    type:     annotation
