--- a/app/config/custom_parameters.yml.dist
+++ b/app/config/custom_parameters.yml.dist
@@ -17,6 +17,18 @@ parameters:
         name: "体验广告"
         category_type: 22
         task_type: 5
+        upper_limit: 5000
+        client_ip: "127.0.0.1" #121.40.71.200
+        mail_subject: "积粒网-bangwoya体验广告接口数据处理失败"
+        bangwoya_api_log: "D:/xampp/htdocs/PointMedia/app/logs/api/bangwoya_api.log"
+        validations:
+            1: { errorno: "1001", message: "缺少参数(检查参数是否传递,nonceStr是否为32位)"}
+            2: { errorno: "1002", message: "密码验证不通过" }
+            3: { errorno: "1003", message: "tid重复" }
+            4: { errorno: "1004", message: "vmoney超过最大限额" }
+            5: { errorno: "1005", message: "partnerid不存在" }
+            6: { errorno: "1006", message: "非法IP" }
+            7: { errorno: "1007", message: "指令收到，充值需要等待" }
 
     cpa.category_type:  1 # in table ad_category where category_name='CPA'
     cps.category_type:  1 # in table ad_category where category_name='CPS'
