配置文件修改 #578

--- a/app/config/custom_parameters.yml.dist
+++ b/app/config/custom_parameters.yml.dist
@@ -12,7 +12,7 @@ parameters:
     offer99_com.task_type: 5
 
     bangwoya_com:
-        url: "http://demo.bangwoya.com/shortname"
+        url: "http://demo.bangwoya.com/91jili"
         key: "91jili2bangwoya"
         name: "体验广告"
         category_type: 22
