#594 debug ci with Jenkins

--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,9 @@ web/images/banner/1397133290_7671.jpeg
 +/nbproject/project.xml
 +/nbproject/project.properties
 _compareTemp
+
+# build
+!build/phpmd.xml
+!build/phpunit.xml
+!build/phpdox.xml
+build/*
