--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
         "jms/di-extra-bundle": "1.3.*",
      	"knplabs/knp-paginator-bundle": "dev-master",
         "gregwar/captcha-bundle": "dev-master",
-        "friendsofsymfony/jsrouting-bundle": "@stable",
+        "friendsofsymfony/jsrouting-bundle": "@stable"
     },
     "require-dev": {
         "squizlabs/php_codesniffer": "~1.5.*",
@@ -31,7 +31,7 @@
         "phploc/phploc": "~2.0.*",
         "phpunit/phpunit": "~4.3.*",
         "theseer/phpdox": "~0.7.*",
-        "fabpot/php-cs-fixer": "0.5.4",
+        "fabpot/php-cs-fixer": "0.5.4"
     },
     "scripts": {
         "post-install-cmd": [
