--- a/composer.json
+++ b/composer.json
@@ -24,14 +24,14 @@
         "friendsofsymfony/jsrouting-bundle": "@stable"
     },
     "require-dev": {
-        "squizlabs/php_codesniffer": "~1.5.*",
-        "phpmd/phpmd": "~2.1.*",
-        "sebastian/phpcpd": "~2.0.*",
-        "pdepend/pdepend": "~2.0.*",
-        "phploc/phploc": "~2.0.*",
-        "phpunit/phpunit": "~4.3.*",
-        "theseer/phpdox": "~0.7.*",
-        "fabpot/php-cs-fixer": "0.5.4"
+        "squizlabs/php_codesniffer": "2.1.0",
+        "phpmd/phpmd": "2.1.3",
+        "sebastian/phpcpd": "2.0.*",
+        "pdepend/pdepend": "2.0.*",
+        "phploc/phploc": "2.0.*",
+        "phpunit/phpunit": "4.3.*",
+        "theseer/phpdox": "0.7.*",
+        "fabpot/php-cs-fixer": "1.3"
     },
     "scripts": {
         "post-install-cmd": [
