--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -53,6 +53,7 @@ twig:
             pid: %offer99_com.pid%
 
         cps_rebate_type: %cps_rebate_type%
+        tb_self_promot_pic_path: %taobao_self_promotion_picture_uri_path% 
 # Assetic Configuration
 assetic:
     debug:          %kernel.debug%
