--- a/app/config/custom_parameters.yml.dist
+++ b/app/config/custom_parameters.yml.dist
@@ -302,4 +302,4 @@ parameters:
 
     taobao_appid: 23058537
     taobao_appsecret: e6ccc0b02a0c2180d3af84f20a7cb535
-    taobao_login_callback_url: http://testgroup.91jili.com/app_dev.php/TaoBaoLogin/taobaocallback
+    taobao_login_callback_url: http://www.91jili.com/TaoBaoLogin/taobaocallback
