微博登陆代码 v1

--- a/app/config/custom_parameters.yml.dist
+++ b/app/config/custom_parameters.yml.dist
@@ -308,3 +308,7 @@ parameters:
     # 201501活动中，保存taobao订单数量
     activity_gathering:
         taobao_order_total_src:  "%cache_data_path%/activity_gathering_taobao_order_total.json"
+
+    weibo_appid: 693159936
+    weibo_appkey: ac24832ff6273b123b4f3dc7747cbf1e
+    callback_url: http://testgroup.91jili.com/WeiBoLogin/weibocallback
