--- a/src/Jili/ApiBundle/Resources/config/services.yml
+++ b/src/Jili/ApiBundle/Resources/config/services.yml
@@ -36,6 +36,7 @@ parameters:
     user_bind.class: Jili\ApiBundle\Services\UserBind
     user_login.class: Jili\ApiBundle\Services\UserLogin
     user_qq_login.class: Jili\ApiBundle\Services\QQLogin
+    user_weibo_login.class: Jili\ApiBundle\Services\WeiBoLogin
 
 # session 
     session.task_list.class: Jili\ApiBundle\Services\Session\User\TaskList
@@ -257,3 +258,6 @@ services:
 
     user_qq_login:
         class: %user_qq_login.class%
+        
+    user_weibo_login:
+        class: %user_weibo_login.class%
