--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,9 @@
 web/bundles/
 web/js/fos_js_routes.js
-#web/images/actionPic/
+web/images/actionPic/
 web/images/tb_products_pic/
 web/images/taobao_products_picture/
-#web/uploads/
+web/uploads/
 app/cache/*
 app/sessions/*
 app/cache_data/*
