兑换流量包 issue #682

--- a/app/config/config_dev.yml.dist
+++ b/app/config/config_dev.yml.dist
@@ -33,4 +33,6 @@ assetic:
 parameters:
 #91wenwen和91jili账号关联secret key
     91wewen_bind_secret_key: %91wewen_bind_secret_key_dev%
+#流量包
+    flow: %flow_dev%
 
