--- a/app/config/config_prod.yml
+++ b/app/config/config_prod.yml
@@ -34,3 +34,5 @@ parameters:
     emar_com.app_AppSecret: %emar_com.demo.AppSecret%
 #91wenwen和91jili账号关联secret key
     91wewen_bind_secret_key: %91wewen_bind_secret_key_prod%
+#流量包
+    flow: %flow_prod%
