--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -23,8 +23,10 @@ parameters:
         url: http://59.83.33.14/   #接口url
         prv_key: 5E703068E764D3DC   #加密私钥
         custom_sn: B772AA94ABDC6BEE   #SN号码
+        file_path_flow_api_log: /data/91jili/logs/api/flow_api.log
     flow_prod:
         url: http://59.83.33.14/   #接口url
         prv_key: 5E703068E764D3DC   #加密私钥
         custom_sn: B772AA94ABDC6BEE   #SN号码
+        file_path_flow_api_log: /data/91jili/logs/api/flow_api.log
 
