--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -143,4 +143,12 @@ gregwar_captcha:
     as_url: true
     invalid_message: %reg_wr_captcha%
 
-
+parameters:
+    #流量包
+    flow:
+        url: %flow_url%
+        prv_key: %flow_prv_key%
+        custom_sn: %flow_custom_sn%
+        file_path_flow_api_log: %flow_file_path_flow_api_log%
+        mail_subject: %flow_mail_subject%
+        alertTo_contacts: %flow_alertTo_contacts%
