--- a/app/config/custom_parameters.yml.dist
+++ b/app/config/custom_parameters.yml.dist
@@ -329,3 +329,11 @@ parameters:
     weibo_appid: 693159936
     weibo_appkey: ac24832ff6273b123b4f3dc7747cbf1e
     weibologin_callback_url: http://www.91jili.com/WeiBoLogin/weibocallback
+
+    #流量包
+    flow_url: http://59.83.33.14/   #接口url
+    flow_prv_key: 5E703068E764D3DC   #加密私钥
+    flow_custom_sn: B772AA94ABDC6BEE   #SN号码
+    flow_file_path_flow_api_log: D:/xampp/htdocs/PointMedia/app/logs/api/flow_api.log
+    flow_mail_subject: "积粒网-flow流量包接口数据处理失败"
+    flow_alertTo_contacts: zhangmm@voyagegroup.com.cn
